samples/_failures_safe/1761401779_643160_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_77181f7a.c: In function ‘decompress_file’:
./samples/SAFE/__tmp_77181f7a.c:163:9: error: expected declaration or statement at end of input
  163 |         }
      |         ^
./samples/SAFE/__tmp_77181f7a.c:163:9: error: expected declaration or statement at end of input
